# test_sol

./: Anchor.toml  Cargo.toml  new_wallet.json
programs/test/: Cargo.toml
programs/test/src/: lib.rs
script/: Cargo.toml
script/src/: main.rs
