[package]
name = "script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "2.0.10"
mpl-token-metadata = "4.1.2"
solana-program = "2.0.10"
solana-sdk = "1.18.12"
borsh = {version = "1.5.0", features = ["derive"]}